allow checksum checker to be worked on off of the 2.0 branch